k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buddy
  namespace: m3test
spec:
  ports:
    - name: buddy
      port: 8501
      targetPort: 8501
  selector:
    app: buddy
