k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buddy
  annotations:
    external-dns.aplpha.kubernetes.io/hostname: buddy.hackathon.doc.network
  namespace: m3test

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - buddy.hackathon.doc.network
    secretName: buddy-certificate
  rules:
  - host: buddy.hackathon.doc.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: buddy
            port:
              number: 8501
